Fix shifting of div elements
added a limit to max-width of background image to hack error where div elements shifted to the left on every reload in chrome browser

--- a/style.css
+++ b/style.css
@@ -116,11 +116,14 @@ img.bg {
 
   filter: brightness(80%);
 }
+
+
 /*
-@media screen and (max-width: 1024px) { 
+Hack for chrome browser
+*/
+@media screen and (max-width: 1440px) { 
   img.bg {
     left: 50%;
-    margin-left: -512px;   
+    margin-left: -720px;   
   }
 }
-*/
